--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.0.0-beta.38",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.38",
     "@babel/preset-env": "^7.0.0-beta.38",
     "babel-loader": "^8.0.0-beta.0",
+    "chalk": "^2.3.0",
     "css-loader": "^0.28.9",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "node-sass": "^4.7.2",
+    "ora": "^1.3.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
@@ -20,8 +24,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "node node_modules/webpack/bin/webpack src/app.js dist/js/app.js",
-    "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server",
-    "watch": "node node_modules/webpack/bin/webpack --config webpack.config.js --watch"
+    "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server --config ./build/webpack.dev.js",
+    "watch": "node node_modules/webpack/bin/webpack --config webpack.config.js --watch",
+    "build": "node ./build/build.js"
   },
   "author": "",
   "license": "ISC"
