--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "babel-loader": "^8.0.0-beta.0",
     "chalk": "^2.3.0",
     "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "node-sass": "^4.7.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
