--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "webpack-notifier": "^1.5.1"
   },
   "devDependencies": {},
   "scripts": {
